Make home directory MacOS compatible

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-import = ["/home/azevedo/.config/alacritty/catppuccin/catppuccin-latte.toml"]
+import = ["~/.config/alacritty/catppuccin/catppuccin-latte.toml"]
 live_config_reload = true
 
 [env]
