--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,6 +48,8 @@ set -g status-keys vi
 
 # Use vi key bindings in copy mode
 setw -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
