Pimp alacritty, tmux and neovim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tpm'
 
 # Add truecolor support
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -56,14 +58,28 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Automatically set window title
-set-window-option -g automatic-rename off
-set-option -g set-titles off
+set-window-option -g automatic-rename on
+set-option -g set-titles on
 
 # Monitor and highlight windows with activity in the status bar
 setw -g monitor-activity on
 
-# user@host week-day month-day month time
-set -g status-right "#(echo $USER)@#H %a %d %b %R"
+set -g @catppuccin_flavour 'latte'
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_status_modules_right "directory user host session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "yes"
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # Run the plugin manager
 run '~/.tmux/plugins/tpm/tpm'
