--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -5,22 +5,22 @@ live_config_reload = true
 TERM = "xterm-256color"
 
 [font]
-size = 12.0
+size = 13.0
 
 [font.bold]
-family = "SF Mono"
+family = "JetBrainsMono Nerd Font Mono"
 style = "Bold"
 
 [font.bold_italic]
-family = "SF Mono"
+family = "JetBrainsMono Nerd Font Mono"
 style = "Bold Italic"
 
 [font.italic]
-family = "SF Mono"
+family = "JetBrainsMono Nerd Font Mono"
 style = "Italic"
 
 [font.normal]
-family = "SF Mono"
+family = "JetBrainsMono Nerd Font Mono"
 style = "Regular"
 
 [selection]
