Add scrolling support

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,7 @@ set -g history-limit 10000
 
 # Enable mouse support
 set -g mouse on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # Set Ctrl+a as prefix
 set -g prefix C-a
