Automatically renumber tmux windows

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,9 +58,10 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Automatically set window title
+# Automatically set window title and number
 set-window-option -g automatic-rename on
 set-option -g set-titles on
+set -g renumber-windows on
 
 # Monitor and highlight windows with activity in the status bar
 setw -g monitor-activity on
