--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,15 +3,13 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
 
 # Add truecolor support
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-# Default terminal is 256 colors
 set -g default-terminal "xterm-256color"
+set -sg terminal-overrides ",*:RGB"
+
 set -g history-limit 10000
 
 # Enable mouse support
 set -g mouse on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # Set Ctrl+a as prefix
 set -g prefix C-a
