--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -64,7 +64,7 @@ set -g renumber-windows on
 # Monitor and highlight windows with activity in the status bar
 setw -g monitor-activity on
 
-set -g @catppuccin_flavour 'latte'
+set -g @catppuccin_flavour 'macchiato'
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
