Add directory symbol on Windows

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,7 +1,7 @@
 # Get editor completions based on the config schema
 "$schema" = 'https://starship.rs/config-schema.json'
 
-format = """$username$hostname$os${custom.directory_symbol_mac}${custom.directory_symbol_linux}$directory$git_branch$git_status$rust$python$nodejs$time$status$cmd_duration\n$character"""
+format = """$username$hostname$os${custom.directory_symbol_mac}${custom.directory_symbol_linux}${custom.directory_symbol_windows}$directory$git_branch$git_status$rust$python$nodejs$time$status$cmd_duration\n$character"""
 
 add_newline = true
 
@@ -26,6 +26,7 @@ style = 'bold blue'
 [os.symbols]
 Macos = ' '
 Ubuntu = ' '
+Windows = ' '
 
 [custom.directory_symbol_mac]
 command = 'if [[ $PWD == $HOME ]]; then echo  ; else echo  ; fi'
@@ -38,6 +39,13 @@ when = true
 command = 'if [[ $PWD == $HOME ]]; then echo  ; else echo  ; fi'
 format = '[$output]($style)  '
 os = 'linux'
+style = 'bold blue'
+when = true
+
+[custom.directory_symbol_windows]
+command = 'if ($PWD.Path -eq $HOME) { " " } else { " " }'
+format = '[$output]($style)  '
+os = 'windows'
 style = 'bold blue'
 when = true
 
