Fix git ahead and behind status

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -61,7 +61,7 @@ truncation_symbol = '…/'
 ahead = '⇡${count}'
 behind = '⇣${count} '
 deleted = '-${count} '
-format = '([$ahead$behind](bold green)[$modified](bold yellow)[$renamed](bold green)[$deleted](bold red)[$staged](bold cyan)[$untracked](bold blue) )'
+format = '([$ahead_behind](bold green) [$modified](bold yellow)[$renamed](bold green)[$deleted](bold red)[$staged](bold cyan)[$untracked](bold blue) )'
 modified = '!${count} '
 renamed = '»${count} '
 staged = '*{count} '
