--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -61,10 +61,11 @@ truncation_symbol = '…/'
 ahead = '⇡${count}'
 behind = '⇣${count} '
 deleted = '-${count} '
+diverged = '⇡${ahead_count}⇣${behind_count}'
 format = '([$ahead_behind](bold green) [$modified](bold yellow)[$renamed](bold green)[$deleted](bold red)[$staged](bold cyan)[$untracked](bold blue) )'
 modified = '!${count} '
 renamed = '»${count} '
-staged = '*${count} '
+staged = '+${count} '
 untracked = '?${count}'
 
 [rust]
