Remove directory symbol

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,7 +1,7 @@
 # Get editor completions based on the config schema
 "$schema" = 'https://starship.rs/config-schema.json'
 
-format = """$username$hostname$os${custom.directory_symbol_mac}${custom.directory_symbol_linux}${custom.directory_symbol_windows}$directory$git_branch$git_status$rust$python$nodejs$time$status$cmd_duration\n$character"""
+format = """$username$hostname$os$directory$git_branch$git_status$rust$python$nodejs$time$status$cmd_duration\n$character"""
 
 add_newline = true
 
