--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tpm'
 
 # Add truecolor support
 set -g default-terminal "xterm-256color"
@@ -64,22 +64,16 @@ set -g renumber-windows on
 # Monitor and highlight windows with activity in the status bar
 setw -g monitor-activity on
 
-set -g @catppuccin_flavour 'macchiato'
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_flavor 'macchiato'
+set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_text "#W"
 set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_status_modules_right "user host session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "yes"
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_user}"
+set -ag status-right "#{E:@catppuccin_status_host}"
+set -ag status-right "#{E:@catppuccin_status_session}"
 
 # Run the plugin manager
 run '~/.tmux/plugins/tpm/tpm'
