--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,6 +1,8 @@
 # Get editor completions based on the config schema
 "$schema" = 'https://starship.rs/config-schema.json'
 
+palette = "catppuccin_mocha"
+
 format = """$username$hostname$directory$git_branch$git_status$rust$python$nodejs$status$cmd_duration\n$character"""
 
 add_newline = true
@@ -57,12 +59,15 @@ truncate_to_repo = false
 truncation_length = 8
 truncation_symbol = '…/'
 
+[git_branch]
+style = 'bold mauve'
+
 [git_status]
 ahead = '⇡${count} '
 behind = '⇣${count} '
 deleted = '-${count} '
 diverged = '⇡${ahead_count}⇣${behind_count} '
-format = '([$ahead_behind](bold green)[$modified](bold yellow)[$renamed](bold green)[$deleted](bold red)[$staged](bold cyan)[$untracked](bold blue))'
+format = '([$ahead_behind](bold green)[$modified](bold peach)[$renamed](bold green)[$deleted](bold red)[$staged](bold cyan)[$untracked](bold blue))'
 modified = '!${count} '
 renamed = '»${count} '
 staged = '+${count} '
@@ -97,3 +102,31 @@ show_milliseconds = true
 
 [character]
 error_symbol = '[❯](bold green)'
+
+[palettes.catppuccin_mocha]
+rosewater = "#f5e0dc"
+flamingo = "#f2cdcd"
+pink = "#f5c2e7"
+mauve = "#cba6f7"
+red = "#f38ba8"
+maroon = "#eba0ac"
+peach = "#fab387"
+yellow = "#f9e2af"
+green = "#a6e3a1"
+teal = "#94e2d5"
+sky = "#89dceb"
+sapphire = "#74c7ec"
+blue = "#89b4fa"
+lavender = "#b4befe"
+text = "#cdd6f4"
+subtext1 = "#bac2de"
+subtext0 = "#a6adc8"
+overlay2 = "#9399b2"
+overlay1 = "#7f849c"
+overlay0 = "#6c7086"
+surface2 = "#585b70"
+surface1 = "#45475a"
+surface0 = "#313244"
+base = "#1e1e2e"
+mantle = "#181825"
+crust = "#11111b"
