Do not strip leading symbols

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -73,6 +73,7 @@
 
 [diff-so-fancy]
     markEmptyLines = false
+    stripLeadingSymbols = false
 
 [includeIf "gitdir:~/Developer/adacore/**"]
     path = .gitconfig_adacore
